--- a/style.css
+++ b/style.css
@@ -209,9 +209,9 @@
     }
 
     .text {
-      position: absolute;
+      position: fixed;
       top: 30px;
-      left: 15%;
+      left: 12%;
       transform: translateX(-50%);
       font-family: 'Orbitron', sans-serif;
       font-size: 38px;
